--- a/index.html
+++ b/index.html
@@ -3,28 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Examen DIW UAX - Aleatorio</title>
+    <title>Motor DIW UAX - Examen</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <video muted loop id="bg-video">
+        <source src="video/hacker.mp4" type="video/mp4">
+    </video>
+
     <div class="quiz-container">
         <div id="quiz-header">
-            <h1 id="progress">DIW_TestProfesorTeoria</h1>
-            <h2 id="question">Cargando pregunta...</h2>
+            <h2 id="question">Cargando sistema...</h2>
             <div id="options-container"></div>
         </div>
 
         <div id="result-screen" class="hide">
-            <h2>Resultado Final</h2>
+            <h2>TEST FINALIZADO</h2>
             <div class="score-circle"><span id="grade">0</span></div>
-            <p id="stats"></p>
-            <button onclick="prepareNewTest()" class="btn-restart">Generar nuevo examen aleatorio</button>
+            <button id="restart-btn">Nuevo Examen</button>
         </div>
-
-        <button id="next-btn">Comprobar</button>
     </div>
 
-    <script src="questions.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
